--- a/Html_1/Html_Practs.html
+++ b/Html_1/Html_Practs.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Html Study </title>
 </head>
+
 <body>
+    <!-- ## 1. We can study about heading. -->
+    <!-- There is 6 heading. -->
+    <!-- 
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6> 
+    -->
+
+
+
+    <!-- ##  2. Paragraph <p>....</p>
     
+        <p>This is a lorem text.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nisi fugiat id accusamus non cumque magnam, minus
+        iste quos unde quia labore architecto optio reiciendis nihil delectus voluptatibus qui possimus.</p> -->
+
+
+    <!-- ## 3. Bold & Italic  -->
+    <!-- 
+         <p>For Bold we can use -> <b>Bold</b> </p> 
+    <p>&</p>
+    <p>For Italic we can use -> <i>Italic</i></p>    
+    -->
+
+    <!-- ## 4. SubScript ^ SupScript -->
+    <!-- 
+        <p>Now we can discuse about Super-Script ^ Sub-Script</p>
+    <p>1. When we can write some maths formula then we need Super-Script and for this we can use -> X<sup>2</sup></p>
+    <p>2. If we need for the chemical formula to write like -> H2O -> the we write -> H<sub>2</sub>O</p> 
+    -->
+
+    <!-- ## 5. Line Breaks ^ Horizontal Breaks -->
+    <!-- 
+        <p>For line breaks we can use -> <br> </p>
+    <p>And for Horizontal Breaks we can use -> <hr> </p> 
+    -->
+
+    <!-- ## 6. Strong ^ Emphasis -->
+    <!-- 
+        <p>For the strong we can -> <strong>Strong</strong>.</p>
+    <p>And for the emphasis we can -> <em>Emphasis</em></p> 
+    -->
+
+    <!-- ## 7. Quotations -->
+    <p>There is a </p>
+
+
 </body>
+
 </html>
