--- a/Html_1/Html_Practs.html
+++ b/Html_1/Html_Practs.html
@@ -55,8 +55,30 @@
     -->
 
     <!-- ## 7. Quotations -->
-    <p>There is a </p>
+    <!-- <p>There is a two types of quotations </p>
+    <p>1. blockquote -> The
+    <blockquote> element is used for longer quotes that take up an entire paragraph. Note how the <p> 
+        element is still used inside the
+    <blockquote> element.
+    </p>
+    <p>2. q -> The <q> element is used for shorter quotes that sit within a paragraph. Browsers are
+    supposed to put quotes around the <q> element, however Internet Explorer does not — therefore many people avoid
+    using the <q> element. </p> -->
 
+    <!-- ## 8. Abbrevations ^ Acronyms -->
+    <!-- <p><abbr title="Professor">Prof</abbr> Stephen
+        Hawking is a theoretical physicist and
+        cosmologist.</p>
+        <p><acronym title="National Aeronautics and Space
+        Administration">NASA</acronym> do some crazy
+        space stuff.</p> -->
+
+    <!-- ## 9. Citations ^ Definations -->
+    <!-- <p> 1.<cite>A Brief History of Time</cite> by Stephen
+        Hawking has sold over ten million copies
+        worldwide.</p>
+    <p>2. A <dfn>black hole</dfn> is a region of space from
+        which nothing, not even light, can escape.</p> -->
 
 </body>
 
