--- a/Html_1/Html_Practs.html
+++ b/Html_1/Html_Practs.html
@@ -80,6 +80,23 @@
     <p>2. A <dfn>black hole</dfn> is a region of space from
         which nothing, not even light, can escape.</p> -->
 
+    <!-- ## 10. Author Detail -->
+    <!-- 
+    <p>1. Address: In this we can add auther detail</p>
+    <address>
+        <p><a href="mailto:homer@example.org">
+                homer@example.org</a></p>
+        <a>
+    </address> 
+    -->
+
+    <!-- ## 11. Changes to Content -->
+    <p>There is three types.</p>
+    <p>1. Insert (ins): When we can Insert some thing new in doccument then we can use -> <ins>Insert</ins>.</p>
+    <p>2. Delete (del): When we can delete something in documment then we can use -> <del>delete</del>.</p>
+
+
+
 </body>
 
 </html>
