--- a/Html_1/Html_Practs.html
+++ b/Html_1/Html_Practs.html
@@ -91,10 +91,12 @@
     -->
 
     <!-- ## 11. Changes to Content -->
-    <p>There is three types.</p>
+    <!-- 
+        <p>There is three types.</p>
     <p>1. Insert (ins): When we can Insert some thing new in doccument then we can use -> <ins>Insert</ins>.</p>
     <p>2. Delete (del): When we can delete something in documment then we can use -> <del>delete</del>.</p>
-
+    <p>3. s (s): When we can make a line in between word or paragraph. then we can use -> <s>Everything is okay.</s></p> 
+    -->
 
 
 </body>
