--- a/Html_1/Html_Practs.html
+++ b/Html_1/Html_Practs.html
@@ -98,6 +98,69 @@
     <p>3. s (s): When we can make a line in between word or paragraph. then we can use -> <s>Everything is okay.</s></p> 
     -->
 
+    <!-- ## 12. List -->
+    <!-- 
+        <p>There is a common three types.</p>
+    <p>1. List.</p>
+    <p>2. Defination list.</p>
+    <p>3. Bullet list.</p>
+
+    <- ^^^^^^^^^^ ->
+    <h2>1. List </h2>
+    <p>There is agin two types.</p>
+    <p>1. Ordered List.</p>
+    <table>
+
+        <ol>
+            <li>English.</li>
+            <li>Maths.</li>
+            <li>Urdu.</li>
+
+        </ol>
+    </table>
+    <p>2. Unordered List.</p>
+    <table>
+        <ul>
+            <li>Biology.</li>
+            <li>Chemistry</li>
+            <li>Pak-study.</li>
+        </ul>
+    </table>
+
+    <- ^^^^^^^^^^ ->
+    <h2>2. Defination list</h2>
+    <table>
+        <dl>
+            <dl>
+                BioLogy:
+            </dl>
+            <dd>Bio means life and -ology means “study of” so biology literally means <b>the study of life</b>. Biology
+                is the
+                study of all living organisms (and dead organisms, like fossils). Biology looks at how these organisms
+                form, develop and interact with each other and their environment</dd>
+            <dt>
+            <dt>Chemistry:</dt>
+            <dd>
+                1. A science that deals with the composition, structure, and properties of substances and with the
+                transformations that they undergo
+            </dd>
+
+            <dd>2. The composition and chemical properties of a substance.</dd>
+            </dt>
+        </dl>
+    </table>
+
+    <h2>3. Bullet list:</h2>
+        <table>
+            <ul style="border-style: dotted; list-style-type: georgian; ">
+                <li>Biology.</li>
+                <li>Chemistry</li>
+                <li>Pak-study.</li>
+            </ul>
+        </table> 
+    -->
+    
+    
 
 </body>
 
