--- a/Html_1/Html_Practs.html
+++ b/Html_1/Html_Practs.html
@@ -159,8 +159,66 @@
             </ul>
         </table> 
     -->
-    
-    
+
+    <!-- ## 13. Links -->
+    <!-- 
+    <p>1. Linking to other sites.</p>
+    <p>2. Links between Pages</p>
+    <p>3. Email links</p>
+
+    <p><Strong>Example:</Strong></p>
+    <a href="https://www.google.com.pk" target="_blank">Google Site</a>
+
+    <h2>1. Linking to other sites:</h2>
+    <p>Movie Reviews:
+    <ul>
+        <li><a href="http://www.empireonline.com">
+                Empire</a></li>
+        <li><a href="http://www.metacritic.com">
+                Metacritic</a></li>
+        <li><a href="http://www.rottentomatoes.com">
+                Rotten Tomatoes</a></li>
+        <li><a href="http://www.variety.com">
+                Variety</a></li>
+    </ul>
+    </p>
+
+    <h2>2. Links to page in same site</h2>
+    <p>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Movies</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+    <br>
+    <h1 id="top">Film Folk</h1>
+    <h2>Festival Diary</h2>
+    <p>Here are some of the film festivals we
+        will be attending this year.<br />Please
+        <a href="mailto:filmfolk@example.org">
+            contact us</a> if you would like more
+        information.
+    </p>
+    <h3>January</h3>
+    <p><a href="http://www.sundance.org">
+            Sundance Film Festival</a><br />
+        Park City, Utah, USA<br />
+        20 - 30 January 2011</p>
+    <h3>February</h3>
+    <p><a href="http://www.tropfest.com">
+            Tropfest</a><br />
+        Sydney, Australia<br />
+        20 February 2011</p>
+    <!- additional content ->
+    <p><a href="about.html">About Film Folk</a></p>
+    <p><a href="#top">Top of page</a></p>
+    </p>
+
+    <h2>3. Email links</h2>
+    <a href="mailto:example@gmail.com" target="_blank"> Example Email.</a> 
+    -->
+
 
 </body>
 
