--- a/Html_1/Html_Practs.html
+++ b/Html_1/Html_Practs.html
@@ -220,6 +220,18 @@
     -->
 
 
+
+    <!-- ## 14. Images: -->
+    <!--
+         <p>For adding Images to website we can use ->
+    </p>
+    <img src="img0.jpg" 
+        alt="sample picture" title="sample picture " width="250px" height="300px">
+    <figure>
+        <img src="img0.jpg" alt="again same picture" width="250px" height="300px">
+        <figcaption>This is figcaption </figcaption>
+    </figure> 
+    -->
 </body>
 
-</html>
+</html> 
